--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
       <div class="header__transparent ouvre">
         <button class="button" href="#"><span class="hum">&nbsp;</span></button>
         <div class="header__transparent__left">
-          <a href="../index.html">
+          <a href="index.html">
             <picture>
               <source
                 type="img/png"
@@ -184,7 +184,7 @@
       </div>
       <div class="header">
         <div class="header__left">
-          <a href="../index.html">
+          <a href="index.html">
             <picture>
               <source
                 type="img/png"
@@ -590,7 +590,7 @@
             </li>
           </ul>
         </div>
-        <a href="../index.html">
+        <a href="index.html">
           <picture>
             <source
               type="img/png"
