add global settings.

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
       </div>
       <div class="header">
         <div class="header__left">
-          <a href="index.html">
+          <a href="../middle_up/index.html">
             <picture>
               <source
                 type="img/png"
@@ -590,7 +590,7 @@
             </li>
           </ul>
         </div>
-        <a href="index.html">
+        <a href="../middle_up/index.html">
           <picture>
             <source
               type="img/png"
