change global address

--- a/index.html
+++ b/index.html
@@ -134,13 +134,13 @@
               <source
                 type="img/png"
                 srcset="
-                  ../img/top-header-logo.png    1x,
-                  ../img/top-header-logo@2x.png 2x
+                  img/top-header-logo.png    1x,
+                  img/top-header-logo@2x.png 2x
                 "
               />
               <img
                 class="header__transparent__img"
-                src="../img/top-header-logo.png"
+                src="img/top-header-logo.png"
                 alt="sub-header-logo"
               />
             </picture>
@@ -170,11 +170,11 @@
             <picture>
               <source
                 type="img/png"
-                srcset="../img/calender.png 1x, ../img/calender@2x.png 2x"
+                srcset="img/calender.png 1x, img/calender@2x.png 2x"
               />
               <img
                 class="header__transparent__calender"
-                src="../img/calender.png"
+                src="img/calender.png"
                 alt="calender"
               />
             </picture>
