change of middle

--- a/index.html
+++ b/index.html
@@ -184,18 +184,18 @@
       </div>
       <div class="header">
         <div class="header__left">
-          <a href="../middle_up/index.html">
+          <a href="index.html">
             <picture>
               <source
                 type="img/png"
                 srcset="
-                  ../img/sub-header-logo.png    1x,
-                  ../img/sub-header-logo@2x.png 2x
+                  img/sub-header-logo.png    1x,
+                  img/sub-header-logo@2x.png 2x
                 "
               />
               <img
                 class="header__img"
-                src="../img/sub-header-logo.png"
+                src="img/sub-header-logo.png"
                 alt="sub-header-logo"
               />
             </picture>
@@ -219,11 +219,11 @@
             <picture>
               <source
                 type="img/png"
-                srcset="../img/calender.png 1x, ../img/calender@2x.png 2x"
+                srcset="img/calender.png 1x, ../img/calender@2x.png 2x"
               />
               <img
                 class="header__calender"
-                src="../img/calender.png"
+                src="img/calender.png"
                 alt="calender"
               />
             </picture>
@@ -590,15 +590,15 @@
             </li>
           </ul>
         </div>
-        <a href="../middle_up/index.html">
+        <a href="index.html">
           <picture>
             <source
               type="img/png"
-              srcset="../img/footer-logo.png 1x, ../img/footer-logo@2x.png 2x"
+              srcset="img/footer-logo.png 1x, img/footer-logo@2x.png 2x"
             />
             <img
               class="footer__img"
-              src="../img/footer-logo.png"
+              src="img/footer-logo.png"
               alt="footer-logo"
             />
           </picture>
