--- a/index.html
+++ b/index.html
@@ -617,5 +617,37 @@
     </script>
 
     <script src="script.js"></script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+          {
+            "@type": "ListItem",
+            "position": 1,
+            "name": "石井花壇 | 温海温泉旅館【公式サイト】",
+            "item": "https://technical-seo.jp/"
+          },
+          {
+            "@type": "ListItem",
+            "position": 2,
+            "name": "お部屋 - 石井花壇 | 温海温泉旅館【公式サイト】",
+            "item": "https://technical-seo.jp/category/seo/"
+          },
+          {
+            "@type": "ListItem",
+            "position": 2,
+            "name": "お料理 - 石井花壇 | 温海温泉旅館【公式サイト】",
+            "item": "https://technical-seo.jp/category/seo/on-page-seo/"
+          }
+          {
+            "@type": "ListItem",
+            "position": 2,
+            "name": "温泉 - 石井花壇 | 温海温泉旅館【公式サイト】",
+            "item": "https://technical-seo.jp/category/seo/on-page-seo/"
+          }
+        ]
+      }
+    </script>
   </body>
 </html>
