--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
             <picture>
               <source
                 type="img/png"
-                srcset="img/calender.png 1x, ../img/calender@2x.png 2x"
+                srcset="img/calender.png 1x, img/calender@2x.png 2x"
               />
               <img
                 class="header__calender"
