--- a/index.html
+++ b/index.html
@@ -235,9 +235,9 @@
     <main>
       <section class="mainhero">
         <h1 class="mainhero__text">頑張る人の<br />頑張らない時間</h1>
-        <img class="mainhero__img" src="img/mainbg1.jpg" alt="mainbg1" />
-        <img class="mainhero__img" src="img/mainbg2.jpg" alt="mainbg2" />
-        <img class="mainhero__img" src="img/mainbg3.jpg" alt="mainbg3" />
+        <img class="mainhero__img" src="img/mainbg1_.jpg" alt="mainbg1" />
+        <img class="mainhero__img" src="img/mainbg2_.jpg" alt="mainbg2" />
+        <img class="mainhero__img" src="img/mainbg3_.jpg" alt="mainbg3" />
       </section>
       <section class="japanese__decoration">
         <div
@@ -619,32 +619,32 @@
     <script src="script.js"></script>
     <script type="application/ld+json">
       {
-        "@context": "https://schema.org",
+        "@context": "https://kotaishihara0329.github.io/middle_up/index.html",
         "@type": "BreadcrumbList",
         "itemListElement": [
           {
             "@type": "ListItem",
             "position": 1,
             "name": "石井花壇 | 温海温泉旅館【公式サイト】",
-            "item": "https://technical-seo.jp/"
+            "item": "https://kotaishihara0329.github.io/middle_up/index.html"
           },
           {
             "@type": "ListItem",
             "position": 2,
             "name": "お部屋 - 石井花壇 | 温海温泉旅館【公式サイト】",
-            "item": "https://technical-seo.jp/category/seo/"
+            "item": "https://kotaishihara0329.github.io/middle_up/html/room.html"
           },
           {
             "@type": "ListItem",
             "position": 2,
             "name": "お料理 - 石井花壇 | 温海温泉旅館【公式サイト】",
-            "item": "https://technical-seo.jp/category/seo/on-page-seo/"
+            "item": "https://kotaishihara0329.github.io/middle_up/html/cuisine.html"
           }
           {
             "@type": "ListItem",
             "position": 2,
             "name": "温泉 - 石井花壇 | 温海温泉旅館【公式サイト】",
-            "item": "https://technical-seo.jp/category/seo/on-page-seo/"
+            "item": "https://kotaishihara0329.github.io/middle_up/html/onsen.html"
           }
         ]
       }
